--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "prepublish": "pnpm build"
   },
   "devDependencies": {
-    "@types/node": "^18.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/node": "^18.15.5",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
-  "packageManager": "pnpm@7.27.0"
+  "packageManager": "pnpm@7.27.0",
+  "dependencies": {
+    "axios": "0.26.1",
+    "openai": "3.2.1"
+  }
 }
