--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  },
-  "packageManager": "pnpm@7.27.0",
-  "dependencies": {
+    "typescript": "^4.9.5",
     "axios": "0.26.1",
     "openai": "3.2.1"
+  },
+  "packageManager": "pnpm@7.27.0",
+  "peerDependencies": {
+    "axios": "^0.26.1",
+    "openai": "^3.2.1"
   }
 }
