feat: basic chat support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "dist",
-    "strict": true
+    "strict": true,
+    "jsx": "react-jsx"
   },
   "exclude": ["dist", "node_modules"]
 }
