--- a/package.json
+++ b/package.json
@@ -31,21 +31,27 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.5",
+    "@types/react": "^18.0.33",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "axios": "0.26.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "openai": "3.2.1",
     "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "axios": "0.26.1",
-    "openai": "3.2.1"
+    "typescript": "^4.9.5"
   },
-  "packageManager": "pnpm@7.27.0",
+  "packageManager": "pnpm@8.1.1",
   "peerDependencies": {
     "axios": "^0.26.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "react": "^18"
+  },
+  "dependencies": {
+    "memoize-one": "^6.0.0",
+    "websocket": "^1.0.34"
   }
 }
