--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.5",
-    "@types/react": "^18.0.33",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "axios": "0.26.1",
@@ -47,8 +46,7 @@
   "packageManager": "pnpm@8.1.1",
   "peerDependencies": {
     "axios": "^0.26.1",
-    "openai": "^3.2.1",
-    "react": "^18"
+    "openai": "^3.2.1"
   },
   "dependencies": {
     "memoize-one": "^6.0.0",
