--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "dist",
-    "strict": true,
-    "jsx": "react-jsx"
+    "strict": true
   },
   "exclude": ["dist", "node_modules"]
 }
