--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "outDir": "dist",
     "strict": true
   },
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "examples"]
 }
