--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "memoize-one": "^6.0.0",
+    "web-streams-polyfill": "^3.2.1",
     "websocket": "^1.0.34"
   }
 }
