--- a/examples/react-chat/package.json
+++ b/examples/react-chat/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@commonbase/sdk": "^0.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-local-storage-state": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
