--- a/examples/react-chat/package.json
+++ b/examples/react-chat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "commonbase-react-chat",
   "private": true,
   "version": "0.0.0",
   "type": "module",
