--- a/.github/actions/pnpm/action.yaml
+++ b/.github/actions/pnpm/action.yaml
@@ -1,17 +1,17 @@
 name: "pnpm"
 description: "Node.js & pnpm setup"
 inputs:
-    node-version:
-        description: "The version of Node.js"
-        required: true
-        default: "18.x"
+  node-version:
+    description: "The version of Node.js"
+    required: true
+    default: "18.x"
 runs:
   using: "composite"
   steps:
     - uses: actions/setup-node@v3
       with:
         node-version: ${{ inputs.node-version }}
-        registry-url: 'https://registry.npmjs.org'
+        registry-url: "https://registry.npmjs.org"
     - uses: pnpm/action-setup@v2
       with:
         version: 7
