--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "build": "tsc && cp package.json README.md ./dist/",
-    "test": "pnpm lint",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix --ext .tsx,.ts,.json",
     "format": "prettier --write .",
@@ -33,6 +34,7 @@
     "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "axios": "0.26.1",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
@@ -41,7 +43,8 @@
     "openai": "3.2.1",
     "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.33.0"
   },
   "packageManager": "pnpm@8.1.1",
   "peerDependencies": {
