--- a/package.json
+++ b/package.json
@@ -31,24 +31,24 @@
     "prepublish": "pnpm build"
   },
   "devDependencies": {
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@types/node": "^18.17.3",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "axios": "0.26.1",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "openai": "3.2.1",
-    "prettier": "^3.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "openai": "^3.3.0",
+    "prettier": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "vitest": "^0.33.0"
+    "vitest": "^0.34.1"
   },
   "packageManager": "pnpm@8.1.1",
   "peerDependencies": {
     "axios": "^0.26.1",
-    "openai": "^3.2.1"
+    "openai": "^3.3.0"
   }
 }
