--- a/package.json
+++ b/package.json
@@ -17,38 +17,38 @@
   "author": "Commonbase Inc.",
   "license": "MIT",
   "main": "./index.js",
+  "types": "./index.d.ts",
   "publishConfig": {
     "directory": "dist",
     "access": "public"
   },
   "scripts": {
-    "build": "tsc && cp package.json README.md ./dist/",
+    "build": "bun run build.mjs && cp package.json README.md ./dist/",
     "test": "eslint . && vitest",
     "coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix --ext .tsx,.ts,.json",
     "format": "prettier --write .",
-    "prepublish": "pnpm build"
+    "prepublish": "bun run build"
   },
   "devDependencies": {
-    "@types/node": "^18.17.3",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "@vitest/coverage-v8": "^0.34.1",
-    "axios": "0.26.1",
-    "eslint": "^8.46.0",
+    "@types/node": "^20.9.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "bun-plugin-dts": "^0.2.1",
+    "bun-types": "^1.0.12",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "openai": "^3.3.0",
-    "prettier": "^3.0.1",
+    "openai": "^4.19.0",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "vitest": "^0.34.1"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
-  "packageManager": "pnpm@8.1.1",
   "peerDependencies": {
-    "axios": "^0.26.1",
-    "openai": "^3.3.0"
+    "openai": "^4.19.0"
   }
 }
