--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,24 +12,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: ./.github/actions/bun
         with:
           node-version: ${{ matrix.node-version }}
       - name: Test
         run: pnpm test
       - name: Build
-        run: pnpm build
+        run: bun build
   release:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: ./.github/actions/bun
         with:
-          node-version: 18.x
+          node-version: 20.x
       - uses: go-semantic-release/action@v1
         id: semrel
         with:
