--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/bun
+      - uses: ./.github/actions/env
         with:
           node-version: ${{ matrix.node-version }}
       - name: Test
@@ -27,7 +27,7 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/bun
+      - uses: ./.github/actions/env
         with:
           node-version: 20.x
       - uses: go-semantic-release/action@v1
