fix(ci): fix build script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Test
         run: pnpm test
       - name: Build
-        run: bun build
+        run: bun run build
   release:
     runs-on: ubuntu-latest
     needs: build
